Modify title and add CSP in index.html
Updated the title and added a Content Security Policy meta tag.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="no-js" lang="en">
 <head>
   <meta charset="UTF-8" />
+  http-equiv= "Content-Security-Policy" Content-Security-Policy: default-src 'self'; img-src 'self' valentinmase.com
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Tabbed Layout</title>
+  <title>Valentin Masé</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
