Update HTML structure and add IE support
Removed outdated class attribute and added conditional HTML5 support.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html class="no-js" lang="en">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
-  http-equiv= "Content-Security-Policy" Content-Security-Policy: default-src 'self'; img-src 'self' valentinmase.com
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!--[if lt IE 9]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
   <title>Valentin Masé</title>
   <link rel="stylesheet" href="styles.css" />
    </script>
