--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!--[if lt IE 9]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
   <title>Valentin Masé</title>
+   <meta name="keywords" content=""/>
+  <meta name="description" content=""/>
   <link rel="stylesheet" href="styles.css" />
    </script>
         <script type="text/javascript">
