Add additional meta tags and scripts to index.html

--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!--[if lt IE 9]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
   <title>Valentin Masé</title>
-   <meta name="keywords" content=""/>
-  <meta name="description" content=""/>
+ <meta name="keywords" content=""/>
+ <meta name="description" content=""/>
+ <link href="https://valentin-mase/" rel="stylesheet">
+ <link href="https://valentin-mase/" rel="stylesheet">
+ <script type="text/javascript" src="https://valentin-mase"></script>
+   <script type="text/javascript">
+            var doadminfunctions = false;
+            var page = '';
+        </script>
   <link rel="stylesheet" href="styles.css" />
    </script>
         <script type="text/javascript">
