Update meta description in index.html
Updated the meta description to include 'Valentin Masé'.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <!--[if lt IE 9]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
   <title>Valentin Masé</title>
  <meta name="keywords" content=""/>
- <meta name="description" content=""/>
+ <meta name="description" content="Valentin Masé"/>
  <link href="https://valentin-mase/" rel="stylesheet">
  <link href="https://valentin-mase/" rel="stylesheet">
  <script type="text/javascript" src="https://valentin-mase"></script>
