Update keywords meta tag and script inclusion

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!--[if lt IE 9]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
   <title>Valentin Masé</title>
- <meta name="keywords" content=""/>
+ <meta name="keywords" content="Valentin Masé"/>
  <meta name="description" content="Valentin Masé"/>
  <link href="https://valentin-mase/" rel="stylesheet">
  <link href="https://valentin-mase/" rel="stylesheet">
- <script type="text/javascript" src="https://valentin-mase"></script>
+ <script type="text/javascript" ></script>
    <script type="text/javascript">
             var doadminfunctions = false;
             var page = '';
