--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -56,164 +57,155 @@
     })();
   </script>
 </head>
+
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Valentin Masé</title>
+
+  <link rel="stylesheet" href="styles.css" />
+
+  <script type="text/javascript">
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-27734646-1']);
+    _gaq.push(['_trackPageview']);
+
+    (function () {
+      var ga = document.createElement('script');
+      ga.type = 'text/javascript';
+      ga.async = true;
+      ga.src =
+        (document.location.protocol === 'https:' ? 'https://ssl' : 'http://www') +
+        '.google-analytics.com/ga.js';
+      var s = document.getElementsByTagName('script')[0];
+      s.parentNode.insertBefore(ga, s);
+    })();
+  </script>
+</head>
+
 <body>
 
-<div class="tabs-container">
-  <input type="radio" name="tabs" id="tab-images" checked>
-  <label for="tab-images" class="tab-label">Images</label>
+  <div class="tabs-container">
 
-  <input type="radio" name="tabs" id="tab-links">
-  <label for="tab-links" class="tab-label">Links</label>
+    <input type="radio" name="tabs" id="tab-images" checked>
+    <label for="tab-images" class="tab-label">Images</label>
 
-  <input type="radio" name="tabs" id="tab-contact">
-  <label for="tab-contact" class="tab-label">Contact</label>
+    <input type="radio" name="tabs" id="tab-links">
+    <label for="tab-links" class="tab-label">Links</label>
 
-  <!-- Images -->
-  <div class="tab-content content-images">
-    <div class="gallery-vertical">
-<!--        
-      <div class="tab-content content-works">
-        <div class="image-container"> -->
+    <input type="radio" name="tabs" id="tab-contact">
+    <label for="tab-contact" class="tab-label">Contact</label>
 
- <img src="images/1.jpg" alt="1.jpg">
-<img src="images/2.jpg" alt="2.jpg">
-<img src="images/3.png" alt="3.png">
-<img src="images/4.JPEG" alt="4.JPEG">
-<img src="images/5.jpg" alt="5.jpg">
-<img src="images/6.png" alt="6.png">
-<img src="images/7.png" alt="7.png">
-<img src="images/8.png" alt="8.png">
-<img src="images/9.JPEG" alt="9.JPEG">
-<img src="images/10.jpg" alt="10.jpg">
-<img src="images/11.jpg" alt="11.jpg">
-<img src="images/12.jpg" alt="12.jpg">
-<img src="images/13.jpg" alt="13.jpg">
-<img src="images/14.jpg" alt="14.jpg">
-<img src="images/15.jpg" alt="15.jpg">
-<img src="images/16.jpeg" alt="16.jpeg">
-<img src="images/17.jpeg" alt="17.jpeg">
-<img src="images/18.jpeg" alt="18.jpeg">
-<img src="images/19.JPEG" alt="19.JPEG">
-<img src="images/20.jpg" alt="20.jpg">
-<img src="images/21.jpg" alt="21.jpg">
-<img src="images/22.jpg" alt="22.jpg">
-<img src="images/23.PNG" alt="23">
-<img src="images/24.PNG" alt="24.PNG">
-<img src="images/25.PNG" alt="25.PNG">
-<img src="images/26.PNG" alt="26.PNG">
-<img src="images/27.jpg" alt="27.jpg">
-<img src="images/28.PNG" alt="28.PNG">
-<img src="images/30.PNG" alt="30.PNG">
-<img src="images/31.PNG" alt="31.PNG">
-<img src="images/32.jpg" alt="32.jpg">
-<img src="images/33.PNG" alt="33.PNG">
-<img src="images/34.PNG" alt="34.PNG">
-<img src="images/35.jpg" alt="35.jpg">
-<img src="images/36.JPEG" alt="36.JPEG">
-<img src="images/37.JPEG" alt="37.JPEG">
-<img src="images/38.jpg" alt="38.jpg">
-<img src="images/39.jpg" alt="39.jpg">
-<img src="images/40.jpg" alt="40">
-<img src="images/41.jpg" alt="41">
-<img src="images/42.jpg" alt="42.jpg">
-<img src="images/43.jpg" alt="43.jpg">
-<img src="images/44.PNG" alt="44.PNG">
-<img src="images/45.jpg" alt="45">
-<img src="images/46.jpg" alt="46.jpg">
-<img src="images/47.jpg" alt="47.jpg">
-<img src="images/48.JPG" alt="48.JPG">
-<img src="images/49.PNG" alt="49.PNG">
-<img src="images/50.jpg" alt="50.jpg">
-<img src="images/51.JPG" alt="51.JPG">
-<img src="images/52.PNG" alt="52.PNG">
-<img src="images/53.jpg" alt="53.jpg">
-<img src="images/54.PNG" alt="54.PNG">
-<img src="images/55.jpg" alt="55">
-<img src="images/56.jpg" alt="56">
-<img src="images/57.jpg" alt="57">
-<img src="images/58.jpg" alt="58">
-<img src="images/59.PNG" alt="59.PNG">
-<img src="images/60.jpg" alt="60.jpg">
-<img src="images/61.JPG" alt="61.JPG">
-<img src="images/62.jpg" alt="62">
-<img src="images/63.jpg" alt="63.jpg">
-<img src="images/64.jpg" alt="64.jpg">
-<img src="images/65.jpg" alt="65.jpg">
-<img src="images/66.jpg" alt="66">
-<img src="images/67.jpg" alt="67">
-<img src="images/68.jpg" alt="68">
-<img src="images/69.jpg" alt="69">
-<img src="images/70.jpg" alt="70">
-<img src="images/71.jpg" alt="71">
-<img src="images/72.jpg" alt="72">
-<img src="images/73.jpg" alt="73">
-<img src="images/74.jpg" alt="74.jpg">
-<img src="images/75.jpg" alt="75">
-<img src="images/76.jpg" alt="76">
-<img src="images/77.jpg" alt="77.jpg">
-<img src="images/78.jpg" alt="78.jpg">
-<img src="images/79.jpg" alt="79.jpg">
-<img src="images/80.jpg" alt="80.jpg">
-<img src="images/81.jpg" alt="81.jpg">
-<img src="images/82.jpg" alt="82.jpg">
-<img src="images/83.png" alt="83.png">
-<img src="images/84.jpg" alt="84.jpg">
+    <!-- IMAGES -->
+    <section class="tab-content content-images">
+      <div class="gallery-vertical">
 
-<!-- </div>
-       
-</div> -->
+        
+        <img src="images/1.jpg" alt="1">
+        <img src="images/2.jpg" alt="2">
+        <img src="images/3.png" alt="3">
+        <img src="images/4.JPEG" alt="4">
+        <img src="images/5.jpg" alt="5">
+        <img src="images/6.png" alt="6">
+        <img src="images/7.png" alt="7">
+        <img src="images/8.png" alt="8">
+        <img src="images/9.JPEG" alt="9">
+        <img src="images/10.jpg" alt="10">
+        <img src="images/11.jpg" alt="11">
+        <img src="images/12.jpg" alt="12">
+        <img src="images/13.jpg" alt="13">
+        <img src="images/14.jpg" alt="14">
+        <img src="images/15.jpg" alt="15">
+        <img src="images/16.jpeg" alt="16">
+        <img src="images/17.jpeg" alt="17">
+        <img src="images/18.jpeg" alt="18">
+        <img src="images/19.JPEG" alt="19">
+        <img src="images/20.jpg" alt="20">
+        <img src="images/21.jpg" alt="21">
+        <img src="images/22.jpg" alt="22">
+        <img src="images/23.PNG" alt="23">
+        <img src="images/24.PNG" alt="24">
+        <img src="images/25.PNG" alt="25">
+        <img src="images/26.PNG" alt="26">
+        <img src="images/27.jpg" alt="27">
+        <img src="images/28.PNG" alt="28">
+        <img src="images/30.PNG" alt="30">
+        <img src="images/31.PNG" alt="31">
+        <img src="images/32.jpg" alt="32">
+        <img src="images/33.PNG" alt="33">
+        <img src="images/34.PNG" alt="34">
+        <img src="images/35.jpg" alt="35">
+        <img src="images/36.JPEG" alt="36">
+        <img src="images/37.JPEG" alt="37">
+        <img src="images/38.jpg" alt="38">
+        <img src="images/39.jpg" alt="39">
+        <img src="images/40.HEIC" alt="40">
+        <img src="images/41.HEIC" alt="41">
+        <img src="images/42.jpg" alt="42">
+        <img src="images/43.jpg" alt="43">
+        <img src="images/44.PNG" alt="44">
+        <img src="images/45.HEIC" alt="45">
+        <img src="images/46.jpg" alt="46">
+        <img src="images/47.jpg" alt="47">
+        <img src="images/48.JPG" alt="48">
+        <img src="images/49.PNG" alt="49">
+        <img src="images/50.jpg" alt="50">
+        <img src="images/51.JPG" alt="51">
+        <img src="images/52.PNG" alt="52">
+        <img src="images/53.jpg" alt="53">
+        <img src="images/54.PNG" alt="54">
+        <img src="images/55.HEIC" alt="55">
+        <img src="images/56.HEIC" alt="56">
+        <img src="images/57.HEIC" alt="57">
+        <img src="images/58.HEIC" alt="58">
+        <img src="images/59.PNG" alt="59">
+        <img src="images/60.jpg" alt="60">
+        <img src="images/61.JPG" alt="61">
+        <img src="images/62.TIF" alt="62">
+        <img src="images/63.jpg" alt="63">
+        <img src="images/64.jpg" alt="64">
+        <img src="images/65.jpg" alt="65">
+        <img src="images/66.HEIC" alt="66">
+        <img src="images/67.HEIC" alt="67">
+        <img src="images/68.HEIC" alt="68">
+        <img src="images/69.HEIC" alt="69">
+        <img src="images/70.HEIC" alt="70">
+        <img src="images/71.HEIC" alt="71">
+        <img src="images/72.HEIC" alt="72">
+        <img src="images/73.HEIC" alt="73">
+        <img src="images/74.jpg" alt="74">
+        <img src="images/75.HEIC" alt="75">
+        <img src="images/76.HEIC" alt="76">
+        <img src="images/77.jpg" alt="77">
+        <img src="images/78.jpg" alt="78">
+        <img src="images/79.jpg" alt="79">
+        <img src="images/80.jpg" alt="80">
+        <img src="images/81.jpg" alt="81">
+        <img src="images/82.jpg" alt="82">
+        <img src="images/83.png" alt="83">
+        <img src="images/84.jpg" alt="84">
 
+      </div>
+    </section>
 
-    </div>
+    <!-- LINKS -->
+    <section class="tab-content content-links">
+      <div class="info-panel">
+        <a href="https://www.proyectoamil.org/exhibicion/heliotropismo/">proyectoamil.org</a><br>
+        <a href="https://www.notvital.com/en/fundaziun/schloss-tarasp">notvital.com</a><br>
+        <a href="https://de.ra.co/events/2226554">ra.co</a><br>
+        <a href="https://saliva.live/exhibitions/df681407">saliva.live</a>
+      </div>
+    </section>
+
+    <!-- CONTACT -->
+    <section class="tab-content content-contact">
+      <div class="info-panel">
+        <p>Valentin Masé</p>
+        <p>tourizm.network@gmail.com</p>
+      </div>
+    </section>
+
   </div>
 
-  <!-- Links -->
-  <div class="tab-content content-links">
-    <div class="info-panel">
-      <h2></h2>
-      <a href="https://www.proyectoamil.org/exhibicion/heliotropismo/">https://www.proyectoamil.org/exhibicion/heliotropismo/</a><br />
-      <a href="https://www.notvital.com/en/fundaziun/schloss-tarasp">https://www.notvital.com/en/fundaziun/schloss-tarasp</a><br />
-       <a href="https://de.ra.co/events/2226554">https://de.ra.co/events/2226554</a><br />
-       <a href="https://saliva.live/exhibitions/df681407">https://saliva.live/exhibitions/df681407</a>
-    </div>
-  </div>
-
-
-  <!-- Contact -->
-  <div class="tab-content content-contact">
-    <div class="info-panel">
-      <h2></h2>
-      <p>Valentin Masé <a href="mailto:tourizm.network@gmail.com"></a> <p>
-       <p> tourizm.network@gmail.com</p>
-    </div>
-  </div>
-</div>
-
-
-<!-- Lightbox overlay -->
-<div id="lightbox" class="lightbox-overlay">
-  <img src="" alt="expanded image">
-</div>
-
-<script>
-const lightbox = document.getElementById('lightbox');
-const lightboxImage = lightbox.querySelector('img');
-const galleryImages = document.querySelectorAll('.gallery-vertical img');
-
-galleryImages.forEach(img => {
-  img.addEventListener('click', () => {
-    lightboxImage.src = img.src;
-    lightbox.classList.add('active');
-  });
-});
-
-lightbox.addEventListener('click', e => {
-  if(e.target !== lightboxImage){
-    lightbox.classList.remove('active');
-  }
-});
-</script>
 </body>
 </html>
-
-
