--- a/index.html
+++ b/index.html
@@ -86,103 +86,40 @@
 
   <div class="tabs-container">
 
-    <input type="radio" name="tabs" id="tab-images" checked>
-    <label for="tab-images" class="tab-label">Images</label>
+   <input type="file" id="files" name="files[]" multiple />
+<img id="image" />
 
-    <input type="radio" name="tabs" id="tab-links">
-    <label for="tab-links" class="tab-label">Links</label>
+<script>
+    function onLoad(evt) {
+        /* do sth with evt.target.result - it image in base64 format ("data:image/jpeg;base64,....") */
+        localStorage.setItem('image', evt.target.result);
+        document.getElementById('image').src = evt.target.result;
+    };
 
-    <input type="radio" name="tabs" id="tab-contact">
-    <label for="tab-contact" class="tab-label">Contact</label>
+    function handleFileUpload(evt) {
+        var files = evt.target.files; // FileList object
 
-    <!-- IMAGES -->
-    <section class="tab-content content-images">
-      <div class="gallery-vertical">
+        for (var i = 0; i < files.length; i++) {
+            var f = files[i];
 
-        
-        <img src="images/1.jpg" alt="1">
-        <img src="images/2.jpg" alt="2">
-        <img src="images/3.png" alt="3">
-        <img src="images/4.JPEG" alt="4">
-        <img src="images/5.jpg" alt="5">
-        <img src="images/6.png" alt="6">
-        <img src="images/7.png" alt="7">
-        <img src="images/8.png" alt="8">
-        <img src="images/9.JPEG" alt="9">
-        <img src="images/10.jpg" alt="10">
-        <img src="images/11.jpg" alt="11">
-        <img src="images/12.jpg" alt="12">
-        <img src="images/13.jpg" alt="13">
-        <img src="images/14.jpg" alt="14">
-        <img src="images/15.jpg" alt="15">
-        <img src="images/16.jpeg" alt="16">
-        <img src="images/17.jpeg" alt="17">
-        <img src="images/18.jpeg" alt="18">
-        <img src="images/19.JPEG" alt="19">
-        <img src="images/20.jpg" alt="20">
-        <img src="images/21.jpg" alt="21">
-        <img src="images/22.jpg" alt="22">
-        <img src="images/23.PNG" alt="23">
-        <img src="images/24.PNG" alt="24">
-        <img src="images/25.PNG" alt="25">
-        <img src="images/26.PNG" alt="26">
-        <img src="images/27.jpg" alt="27">
-        <img src="images/28.PNG" alt="28">
-        <img src="images/30.PNG" alt="30">
-        <img src="images/31.PNG" alt="31">
-        <img src="images/32.jpg" alt="32">
-        <img src="images/33.PNG" alt="33">
-        <img src="images/34.PNG" alt="34">
-        <img src="images/35.jpg" alt="35">
-        <img src="images/36.JPEG" alt="36">
-        <img src="images/37.JPEG" alt="37">
-        <img src="images/38.jpg" alt="38">
-        <img src="images/39.jpg" alt="39">
-        <img src="images/40.HEIC" alt="40">
-        <img src="images/41.HEIC" alt="41">
-        <img src="images/42.jpg" alt="42">
-        <img src="images/43.jpg" alt="43">
-        <img src="images/44.PNG" alt="44">
-        <img src="images/45.HEIC" alt="45">
-        <img src="images/46.jpg" alt="46">
-        <img src="images/47.jpg" alt="47">
-        <img src="images/48.JPG" alt="48">
-        <img src="images/49.PNG" alt="49">
-        <img src="images/50.jpg" alt="50">
-        <img src="images/51.JPG" alt="51">
-        <img src="images/52.PNG" alt="52">
-        <img src="images/53.jpg" alt="53">
-        <img src="images/54.PNG" alt="54">
-        <img src="images/55.HEIC" alt="55">
-        <img src="images/56.HEIC" alt="56">
-        <img src="images/57.HEIC" alt="57">
-        <img src="images/58.HEIC" alt="58">
-        <img src="images/59.PNG" alt="59">
-        <img src="images/60.jpg" alt="60">
-        <img src="images/61.JPG" alt="61">
-        <img src="images/62.TIF" alt="62">
-        <img src="images/63.jpg" alt="63">
-        <img src="images/64.jpg" alt="64">
-        <img src="images/65.jpg" alt="65">
-        <img src="images/66.HEIC" alt="66">
-        <img src="images/67.HEIC" alt="67">
-        <img src="images/68.HEIC" alt="68">
-        <img src="images/69.HEIC" alt="69">
-        <img src="images/70.HEIC" alt="70">
-        <img src="images/71.HEIC" alt="71">
-        <img src="images/72.HEIC" alt="72">
-        <img src="images/73.HEIC" alt="73">
-        <img src="images/74.jpg" alt="74">
-        <img src="images/75.HEIC" alt="75">
-        <img src="images/76.HEIC" alt="76">
-        <img src="images/77.jpg" alt="77">
-        <img src="images/78.jpg" alt="78">
-        <img src="images/79.jpg" alt="79">
-        <img src="images/80.jpg" alt="80">
-        <img src="images/81.jpg" alt="81">
-        <img src="images/82.jpg" alt="82">
-        <img src="images/83.png" alt="83">
-        <img src="images/84.jpg" alt="84">
+            // Only process image files.
+            if (!f.type.match('image.*')) {
+                continue;
+            }
+
+            var reader = new FileReader();
+            reader.onload = onLoad;
+            reader.readAsDataURL(f);
+        }
+    }
+
+    document.getElementById('files').addEventListener('change', handleFileUpload, false);
+
+    var image = localStorage.getItem('image');
+    if (image !== null) {
+        document.getElementById('image').src = image;
+    }
+</script>
 
       </div>
     </section>
